[package]
name = "bigiron-virt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
hex = "0.4.3"
ipnet = "2.9.0"
quick-xml = "0.30.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.19"
sha2 = "0.10.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }
virt = "0.2.10"
